fixing colors to make text readable

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -11,7 +11,7 @@ body {
 	font-family:Georgia, "Times New Roman", Times, serif;
 	font-size:100%; 
 	line-height:1.5em;
-	
+	color:gray;
 }
 .menutext {
 	line-height:1.0em;
@@ -24,7 +24,7 @@ body.menu {
 	font-family:Georgia, "Times New Roman", Times, serif;
 	font-size:100%; 
 	line-height:1.5em;
-	color:khaki;
+	color:gray;
 }
 
 img {
@@ -47,7 +47,7 @@ li.hor {
 li a {
     display: block;
     padding: 8px;
-    background-color: #11a22c;
+    background-color: #804000;
     border-right: 1px solid #bbb;
 }
 
